--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="m_2">
-        <div class="m_2_1">z
+        <div class="m_2_1">
             <img src="img/img04.png" alt="">
         </div>
         <div class="m_2_2">
